# aoc

./: .gitignore  day11.py  day12.py  day14.py  day19.py  day20.html  day20.py  day3.py  day8.py  pyproject.toml
2023/: day10.py  day11.py  day13.py  day4.py  day5.a68  day6.py  pyproject.toml
2025/: Cargo.toml  build.sbt  day01.py  day02.scala  day03.rs  day04.py  day05.sc  day06.rs  day09.sc  pyproject.toml
day7/src/: main.rs
