[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["askepen <aske@vhg26.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.1"
tqdm = "^4.66.1"
numpy = "^1.26.2"
networkx = "^3.2.1"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
